--- a/about.html
+++ b/about.html
@@ -17,7 +17,10 @@
 
     <main>
         <h1>About Us</h1>
-        <p>Top Cooling HVAC is a well-established HVAC company with many years of experience in the HVAC industry.</p>
+        <p>Top Cooling HVAC is a well-established HVAC company with many years of experience in the industry. Our comprehensive service offerings ensure that your HVAC needs are met with professionalism and expertise. More details to follow soon!</p>
+
+        <!-- Under Construction message -->
+        <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
 </body>
