--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
         <h1>Contact Us</h1>
         <p>Phone: 347.760.3118</p>
         <p>Email: <a href="mailto:mendy@topcoolinghvac.com">mendy@topcoolinghvac.com</a></p>
+
+        <!-- Under Construction message -->
+        <p><em>This page is currently under construction. Please check back later for more comprehensive contact options.</em></p>
     </main>
 
 </body>
