--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Cooling HVAC - Home</title>
+    <title>Home - Top Cooling HVAC</title>
     <style>
-      /* Simple CSS for styling */
-      body { font-family: Arial, sans-serif; }
-      nav { background-color: #f8f9fa; padding: 10px; }
-      nav a { margin: 0 10px; text-decoration: none; color: #000; }
-      main { padding: 20px; }
+        body { font-family: Arial, sans-serif; }
+        nav { background-color: #f8f9fa; padding: 10px; }
+        nav a { margin: 0 10px; text-decoration: none; color: #000; }
+        main { padding: 20px; }
     </style>
 </head>
 <body>
@@ -23,7 +22,7 @@
 
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-        <p>Welcome to Top Cooling HVAC. We are here to ensure your complete comfort and satisfaction with our dependable HVAC services.</p>
+        <p>Welcome to Top Cooling HVAC. Your comfort and satisfaction are our top priorities. Check back soon for our fully updated site!</p>
     </main>
 
 </body>
