--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Top Cooling HVAC</title>
+    <title>Our Services - Top Cooling HVAC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,9 +16,11 @@
     </nav>
 
     <main>
-        <h1>Contact Us</h1>
-        <p>Phone: 347.760.3118</p>
-        <p>Email: <a href="mailto:mendy@topcoolinghvac.com">mendy@topcoolinghvac.com</a></p>
+        <h1>Our Services</h1>
+        <p>We proudly serve NYC and the Tri-State area, offering a range of HVAC solutions. More detailed service information will be available soon!</p>
+
+        <!-- Under Construction message -->
+        <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
 </body>
