--- a/about.html
+++ b/about.html
@@ -17,9 +17,8 @@
 
     <main>
         <h1>About Us</h1>
-        <p>Top Cooling HVAC is a well-established HVAC company with many years of experience in the industry. Our comprehensive service offerings ensure that your HVAC needs are met with professionalism and expertise. More details to follow soon!</p>
-
-        <!-- Under Construction message -->
+        <img src="https://via.placeholder.com/800x300" alt="Our Team">
+        <p>Established with excellence in mind, Top Cooling HVAC brings innovation and reliability to the HVAC industry. Learn more about our journey soon!</p>
         <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
