--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,9 @@
 
     <main>
         <h1>Contact Us</h1>
-        <p>Phone: 347.760.3118</p>
-        <p>Email: <a href="mailto:mendy@topcoolinghvac.com">mendy@topcoolinghvac.com</a></p>
-
-        <!-- Under Construction message -->
+        <img src="https://via.placeholder.com/800x300" alt="Contact Graph">
+        <p>Phone: 347.760.3111</p>
+        <p>Email: <a href="mailto:meny@topcoolinghvac.com">meny@topcoolinghvac.com</a></p>
         <p><em>This page is currently under construction. Please check back later for more comprehensive contact options.</em></p>
     </main>
 
