--- a/services.html
+++ b/services.html
@@ -17,9 +17,8 @@
 
     <main>
         <h1>Our Services</h1>
-        <p>We proudly serve NYC and the Tri-State area, offering a range of HVAC solutions. More detailed service information will be available soon!</p>
-
-        <!-- Under Construction message -->
+        <img src="https://via.placeholder.com/800x300" alt="Services Offered">
+        <p>Discover a range of HVAC services tailored to your needs. Delivering quality and performance, from installation to maintenance. Check back soon!</p>
         <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
