--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Top Cooling HVAC</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        nav { background-color: #f8f9fa; padding: 10px; }
-        nav a { margin: 0 10px; text-decoration: none; color: #000; }
-        main { padding: 20px; }
+      body { 
+          font-family: Arial, sans-serif; 
+          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+          color: #333; 
+          margin: 0; 
+      }
+      nav { 
+          background-color: #333; 
+          padding: 15px; 
+          text-align: center; 
+      }
+      nav a { 
+          margin: 0 15px; 
+          text-decoration: none; 
+          color: #fff; 
+          font-weight: bold; 
+      }
+      nav a:hover { 
+          color: #ffcb05; 
+      }
+      main { 
+          padding: 40px; 
+          max-width: 800px; 
+          margin: auto; 
+          background: #fff; 
+          border-radius: 8px; 
+          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+      }
+      h1 { 
+          color: #00395d;
+      }
+      img {
+          width: 100%;
+          border-radius: 8px;
+      }
     </style>
 </head>
 <body>
@@ -22,7 +53,8 @@
 
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-        <p>Welcome to Top Cooling HVAC. Your comfort and satisfaction are our top priorities. Check back soon for our fully updated site!</p>
+        <img src="https://via.placeholder.com/800x300" alt="Cooling System Image">
+        <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
     </main>
 
 </body>
