--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
     <main>
         <h1>Our Services</h1>
         <img src="https://via.placeholder.com/800x300" alt="Services Offered">
-        <p>Discover a range of HVAC services tailored to your needs. Delivering quality and performance, from installation to maintenance. Check back soon!</p>
+        <p>Discover a range of HVAC services to help you with all your HVAC needs. Delivering quality and performance.</p>
         <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
