--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <main>
         <h1>About Us</h1>
         <img src="https://via.placeholder.com/800x300" alt="Our Team">
-        <p>Established with excellence in mind, Top Cooling HVAC brings innovation and reliability to the HVAC industry. Learn more about our journey soon!</p>
+        <p>Established with excellence in mind, Top Cooling HVAC brings innovation and reliability to the HVAC industry.</p>
         <p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
