--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h1>Welcome to Top Cooling HVAC</h1>
         <img src="https://via.placeholder.com/800x300" alt="Cooling System Image">
         <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
+	<p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
 </body>
