--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Us</title>
+    <title>Blog</title>
 </head>
 <body>
     <nav>
@@ -17,8 +17,8 @@
         </ul>
     </nav>
 
-    <h1>About Us</h1>
-    <p>Learn more about our company and our mission.</p>
+    <h1>Blog</h1>
+    <p>Read our latest updates and articles.</p>
 
     <footer>
         <p>© 2025 Rachel's Top Cooling</p>
