--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Top Cooling HVAC</title>
     <link rel="stylesheet" href="style.css">
+    <title>Contact Us</title>
 </head>
 <body>
-
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Our Services</a>
-        <a href="contact.html">Contact Us</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
     </nav>
 
-    <main>
-        <h1>Contact Us</h1>
-        <img src="https://via.placeholder.com/800x300" alt="Contact Graph">
-        <p>Phone: 347.760.3111</p>
-        <p>Email: <a href="mailto:meny@topcoolinghvac.com">meny@topcoolinghvac.com</a></p>
-        <p><em>This page is currently under construction. Please check back later for more comprehensive contact options.</em></p>
-    </main>
+    <h1>Contact Us</h1>
+    <p>Reach out with any questions or feedback.</p>
 
+    <footer>
+        <p>© 2025 Rachel's Top Cooling</p>
+    </footer>
 </body>
 </html>
