--- a/services.html
+++ b/services.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - Top Cooling HVAC</title>
     <link rel="stylesheet" href="style.css">
+    <title>Services</title>
 </head>
 <body>
-
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Our Services</a>
-        <a href="contact.html">Contact Us</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
     </nav>
 
-    <main>
-        <h1>Our Services</h1>
-        <img src="https://via.placeholder.com/800x300" alt="Services Offered">
-        <p>Discover a range of HVAC services to help you with all your HVAC needs. Delivering quality and performance.</p>
-        <p><em>This page is currently under construction. Please check back later for more information.</em></p>
-    </main>
+    <h1>Our Services</h1>
+    <p>Discover the range of services we offer.</p>
 
+    <footer>
+        <p>© 2025 Rachel's Top Cooling</p>
+    </footer>
 </body>
 </html>
