--- a/about.html
+++ b/about.html
@@ -4,24 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Us</title>
+    <title>About Us | Rachel's Top Cooling</title>
+    <!-- Styles are applied throughout using style.css -->
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="blog.html">Blog</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1>About Us</h1>
-    <p>Learn more about our company and our mission.</p>
+    <main>
+        <section id="introduction">
+            <h1>About Us</h1>
+            <p>Established with excellence in mind, Top Cooling HVAC brings innovation and reliability to the HVAC industry.</p>
+        </section>
+
+        <section id="team">
+            <h2>Our Team</h2>
+            <p>Our team comprises experienced professionals dedicated to sustainable cooling solutions. With years of expertise, we are equipped to handle diverse challenges and deliver exceptional outcomes.</p>
+            <!-- Add more information or images of the team members to personalize this section -->
+        </section>
+
+        <section id="history">
+            <h2>Our History</h2>
+            <p>Founded in 2020, Rachel's Top Cooling has rapidly grown to become a leader in the cooling industry. Our commitment to innovation and quality has placed us at the forefront of cooling technologies.</p>
+            <!-- Consider adding timelines or infographics for better visuals -->
+        </section>
+    </main>
 
     <footer>
-        <p>© 2025 Rachel's Top Cooling</p>
+        <p>© 2025 Rachel @ Top Cooling | <a href="privacy.html">Privacy Policy</a></p>
     </footer>
+    
+    <!-- JavaScript or other resources can be linked here -->
 </body>
 </html>
