--- a/about.html
+++ b/about.html
@@ -3,46 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>About Us | Rachel's Top Cooling</title>
-    <!-- Styles are applied throughout using style.css -->
+    <title>About Us - Top Cooling HVAC</title>
+    <style>
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+            color: #333; 
+            margin: 0; 
+        }
+        nav { 
+            background-color: #333; 
+            padding: 15px; 
+            text-align: center; 
+        }
+        nav a { 
+            margin: 0 15px; 
+            text-decoration: none; 
+            color: #fff; 
+            font-weight: bold; 
+        }
+        nav a:hover { 
+            color: #ffcb05; 
+        }
+        main { 
+            padding: 40px; 
+            max-width: 800px; 
+            margin: auto; 
+            background: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+        }
+        h1 { 
+            color: #00395d;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Our Services</a>
+        <a href="contact.html">Contact Us</a>
+    </nav>
 
     <main>
-        <section id="introduction">
-            <h1>About Us</h1>
-            <p>Established with excellence in mind, Top Cooling HVAC brings innovation and reliability to the HVAC industry.</p>
-        </section>
-
-        <section id="team">
-            <h2>Our Team</h2>
-            <p>Our team comprises experienced professionals dedicated to sustainable cooling solutions. With years of expertise, we are equipped to handle diverse challenges and deliver exceptional outcomes.</p>
-            <!-- Add more information or images of the team members to personalize this section -->
-        </section>
-
-        <section id="history">
-            <h2>Our History</h2>
-            <p>Founded in 2020, Rachel's Top Cooling has rapidly grown to become a leader in the cooling industry. Our commitment to innovation and quality has placed us at the forefront of cooling technologies.</p>
-            <!-- Consider adding timelines or infographics for better visuals -->
-        </section>
+        <h1>About Us</h1>
+        <p>At Top Cooling HVAC, we are committed to providing top-quality cooling solutions. Our team of experts is dedicated to ensuring the comfort and satisfaction of our clients.</p>
+        <p>Established in 2020, we have continuously grown and innovated to stay ahead in the cooling industry.</p>
     </main>
 
-    <footer>
-        <p>© 2025 Rachel @ Top Cooling | <a href="privacy.html">Privacy Policy</a></p>
-    </footer>
-    
-    <!-- JavaScript or other resources can be linked here -->
 </body>
 </html>
