--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Contact Us</title>
+    <title>Home - Top Cooling HVAC</title>
+    <style>
+      body { 
+          font-family: Arial, sans-serif; 
+          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+          color: #333; 
+          margin: 0; 
+      }
+      nav { 
+          background-color: #333; 
+          padding: 15px; 
+          text-align: center; 
+      }
+      nav a { 
+          margin: 0 15px; 
+          text-decoration: none; 
+          color: #fff; 
+          font-weight: bold; 
+      }
+      nav a:hover { 
+          color: #ffcb05; 
+      }
+      main { 
+          padding: 40px; 
+          max-width: 800px; 
+          margin: auto; 
+          background: #fff; 
+          border-radius: 8px; 
+          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+      }
+      h1 { 
+          color: #00395d;
+      }
+      img {
+          width: 100%;
+          border-radius: 8px;
+      }
+    </style>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="blog.html">Blog</a></li>
-        </ul>
-    </nav>
-
-    <h1>Contact Us</h1>
-    <p>Reach out with any questions or feedback.</p>
-
-    <footer>
-        <p>© 2025 Rachel's Top Cooling</p>
-    </footer>
-</body>
-</html>
