--- a/services.html
+++ b/services.html
@@ -3,43 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Top Cooling HVAC</title>
+    <title>Our Services - Top Cooling HVAC</title>
     <style>
-      body { 
-          font-family: Arial, sans-serif; 
-          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
-          color: #333; 
-          margin: 0; 
-      }
-      nav { 
-          background-color: #333; 
-          padding: 15px; 
-          text-align: center; 
-      }
-      nav a { 
-          margin: 0 15px; 
-          text-decoration: none; 
-          color: #fff; 
-          font-weight: bold; 
-      }
-      nav a:hover { 
-          color: #ffcb05; 
-      }
-      main { 
-          padding: 40px; 
-          max-width: 800px; 
-          margin: auto; 
-          background: #fff; 
-          border-radius: 8px; 
-          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-      }
-      h1 { 
-          color: #00395d;
-      }
-      img {
-          width: 100%;
-          border-radius: 8px;
-      }
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+            color: #333; 
+            margin: 0; 
+        }
+        nav { 
+            background-color: #333; 
+            padding: 15px; 
+            text-align: center; 
+        }
+        nav a { 
+            margin: 0 15px; 
+            text-decoration: none; 
+            color: #fff; 
+            font-weight: bold; 
+        }
+        nav a:hover { 
+            color: #ffcb05; 
+        }
+        main { 
+            padding: 40px; 
+            max-width: 800px; 
+            margin: auto; 
+            background: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+        }
+        h1 { 
+            color: #00395d;
+        }
     </style>
 </head>
 <body>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Our Services</a>
+        <a href="contact.html">Contact Us</a>
+    </nav>
+
+    <main>
+        <h1>Our Services</h1>
+        <p>We offer a wide range of services including HVAC installation, maintenance, and repair. Our solutions are tailored to meet the unique needs of each client.</p>
+        <p>Contact us today to learn more about how we can ensure your home or office remains comfortably cool.</p>
+    </main>
+
+</body>
+</html>
