--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Our Services</a>
+        <a href="blog.html">Blog</a>
         <a href="contact.html">Contact Us</a>
     </nav>
 
@@ -55,7 +56,6 @@
         <h1>Welcome to Top Cooling HVAC</h1>
         <img src="https://via.placeholder.com/800x300" alt="Cooling System Image">
         <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
-	<p><em>This page is currently under construction. Please check back later for more information.</em></p>
     </main>
 
 </body>
