--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
         <a href="about.html">About Us</a>
         <a href="services.html">Our Services</a>
         <a href="contact.html">Contact Us</a>
+        <a href="blog.html">Blog</a>
     </nav>
 
     <main>
