--- a/contact.html
+++ b/contact.html
@@ -3,40 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Top Cooling HVAC</title>
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
-            color: #333; 
-            margin: 0; 
-        }
-        nav { 
-            background-color: #333; 
-            padding: 15px; 
-            text-align: center; 
-        }
-        nav a { 
-            margin: 0 15px; 
-            text-decoration: none; 
-            color: #fff; 
-            font-weight: bold; 
-        }
-        nav a:hover { 
-            color: #ffcb05; 
-        }
-        main { 
-            padding: 40px; 
-            max-width: 800px; 
-            margin: auto; 
-            background: #fff; 
-            border-radius: 8px; 
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-        }
-        h1 { 
-            color: #00395d;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>Contact Us</title>
 </head>
 <body>
 
@@ -45,14 +13,14 @@
         <a href="about.html">About Us</a>
         <a href="services.html">Our Services</a>
         <a href="contact.html">Contact Us</a>
+        <a href="blog.html">Blog</a>
     </nav>
 
-    <main>
-        <h1>Contact Us</h1>
-        <p>If you have any questions, feel free to reach out to us at Top Cooling HVAC. We are here to assist you with any HVAC needs and ensure your satisfaction.</p>
-        <p>Email: support@topcoolinghvac.com | Phone: (555) 555-5555</p>
-    </main>
+    <h1>Contact Us</h1>
+    <p>Reach out with any questions or feedback.</p>
 
+    <footer>
+        <p>© 2025 Rachel's Top Cooling</p>
+    </footer>
 </body>
 </html>
-
