--- a/index.html
+++ b/index.html
@@ -5,58 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Top Cooling HVAC</title>
     <style>
-      body { 
-          font-family: Arial, sans-serif; 
-          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
-          color: #333; 
-          margin: 0; 
-      }
-      nav { 
-          background-color: #333; 
-          padding: 15px; 
-          text-align: center; 
-      }
-      nav a { 
-          margin: 0 15px; 
-          text-decoration: none; 
-          color: #fff; 
-          font-weight: bold; 
-      }
-      nav a:hover { 
-          color: #ffcb05; 
-      }
-      main { 
-          padding: 40px; 
-          max-width: 800px; 
-          margin: auto; 
-          background: #fff; 
-          border-radius: 8px; 
-          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-      }
-      h1 { 
-          color: #00395d;
-      }
-      img {
-          width: 100%;
-          border-radius: 8px;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            background: #f8f9fa;
+            padding: 20px;
+            color: #333;
+        }
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        h1 {
+            text-align: center;
+            color: #00395d;
+        }
     </style>
 </head>
 <body>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Our Services</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact Us</a>
-    </nav>
+    <h1>Top Cooling HVAC</h1>
+    <!-- Avoid using full paths for production; for local testing purpose: -->
+    <img src="file:///C:/Users/rache/OneDrive/Desktop/Excelsior/IT371/Module%203/top%20cooling%20logo.jpg" alt="Top Cooling Logo">
 
-    <main>
-        <h1>Welcome to Top Cooling HVAC</h1>
-        <img src="https://via.placeholder.com/800x300" alt="Cooling System Image">
-        <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
-    </main>
+    <p>Welcome to Top Cooling HVAC! We provide efficient and reliable HVAC services to ensure your comfort all year round.</p>
 
 </body>
 </html>
