--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Contact Us</title>
+    <title>Contact Us - Top Cooling HVAC</title>
+    <style>
+      body { 
+          font-family: Arial, sans-serif; 
+          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+          color: #333; 
+          margin: 0; 
+          line-height: 1.6;
+      }
+      nav { 
+          background-color: #333; 
+          padding: 15px; 
+          text-align: center; 
+      }
+      nav a { 
+          margin: 0 15px; 
+          text-decoration: none; 
+          color: #fff; 
+          font-weight: bold; 
+      }
+      nav a:hover { 
+          color: #ffcb05; 
+      }
+      main { 
+          padding: 40px; 
+          max-width: 800px; 
+          margin: auto; 
+          background: #fff; 
+          border-radius: 8px; 
+          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+      }
+      h1 { 
+          color: #00395d;
+      }
+      form {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+      }
+      input, textarea {
+          padding: 10px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          width: 100%;
+      }
+      button {
+          background-color: #00395d;
+          color: #fff;
+          border: none;
+          padding: 15px;
+          border-radius: 4px;
+          cursor: pointer;
+          font-weight: bold;
+      }
+      button:hover {
+          background-color: #ffcb05;
+      }
+    </style>
 </head>
 <body>
 
@@ -16,11 +72,22 @@
         <a href="blog.html">Blog</a>
     </nav>
 
-    <h1>Contact Us</h1>
-    <p>Reach out with any questions or feedback.</p>
+    <main>
+        <h1>Contact Us</h1>
+        <p>We'd love to hear from you! Please fill out the form below to get in touch with us.</p>
+        <form action="#" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-    <footer>
-        <p>© 2025 Rachel's Top Cooling</p>
-    </footer>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
+    </main>
+
 </body>
 </html>
