--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 
     <main>
         <h1>About Us</h1>
-        <p>At Top Cooling HVAC, we are committed to providing top-quality cooling solutions. Our team of experts is dedicated to ensuring the comfort and satisfaction of our clients.</p>
-        <p>Established in 2020, we have continuously grown and innovated to stay ahead in the cooling industry.</p>
+        <p>Top cooling hvac is a well-established hvac company with many years of experience in the hvac industry .</p>
+        <p>Established in 2020, we continue to grown and stay ahead of the competition in the heating and cooling industry.</p>
     </main>
 
 </body>
