--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
     <main>
         <h1>Contact Us</h1>
-        <p>We'd love to hear from you! Please fill out the form below to get in touch with us.</p>
+        <p>We would love to hear from you, Please fill out the form to get in touch with us.</p>
         <form action="#" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
