--- a/services.html
+++ b/services.html
@@ -50,8 +50,8 @@
 
     <main>
         <h1>Our Services</h1>
-        <p>We offer a wide range of services including HVAC installation, maintenance, and repair. Our solutions are tailored to meet the unique needs of each client.</p>
-        <p>Contact us today to learn more about how we can ensure your home or office remains comfortably cool.</p>
+        <p>We service NYC and Tristate area. We are trained to meet the unique needs of each client.</p>
+        <p>Contact us today to learn more about how we can ensure your building remains comfortably warm or cool.</p>
     </main>
 
 </body>
