--- a/blog.html
+++ b/blog.html
@@ -50,8 +50,8 @@
 
     <main>
         <h1>Our Blog</h1>
-        <p>Welcome to our blog! Here we will share tips, updates, and industry insights to help you stay informed about HVAC systems and technology.</p>
-        <p>Stay tuned for upcoming posts!</p>
+        <p>Welcome to our blog! Here we will share tips, updates, and industry insights to help you stay informed about HVAC systems.</p>
+        <p>Stay tuned for more posts!</p>
     </main>
 
 </body>
