--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<img src="images/topcooling_logo.jpg" alt="Top Cooling Logo"> 
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Top Cooling</title>
+</head>
+<body>
+
+  <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg" alt="Top Cooling Logo">
+
+  </body>
+</html>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
