--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<img src="images/topcooling_logo.jpg" alt="Top Cooling Logo"> 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -64,8 +62,7 @@
 
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-        <!-- Replace placeholder image with your actual image path if needed -->
-        <img src="images/top-cooling-logo.jpg" alt="Top Cooling Logo">
+          <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg" alt="Top Cooling Logo">
         <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
     </main>
 
