--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg" alt="Top Cooling Logo">
+  <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg">
 
   </body>
 </html>
@@ -55,7 +55,7 @@
 
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-          <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg" alt="Top Cooling Logo">
+
         <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
     </main>
 
