--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <img src="C:\Users\rache\OneDrive\Desktop\Excelsior\IT371\Module 3\topcooling_logo.jpg">
+<img src="images/topcooling_logo.png" alt="Top Cooling Logo">
 
   </body>
 </html>
