--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<img src="images/topcooling_logo.png" alt="Top Cooling Logo">
-
+<body>
+    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:100%; display:block; max-height:400px; object-fit:cover;">
+    <nav>
   </body>
 </html>
 
