--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:100%; display:block; max-height:400px; object-fit:cover;">
+    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:800px; height:600px; display:block; object-fit:cover; margin: 0 auto;">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
