--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-        <p>At Top Cooling HVAC, we prioritize your comfort with cutting-edge technology and expert installation services. Stay tuned for updates!</p>
+        <p>At Top Cooling HVAC, we are dedicated to ensuring your ultimate comfort with state-of-the-art technology and expert installation services. Our team is committed to excellence and stays up-to-date with the latest innovations in the HVAC industry. Stay tuned for exciting updates and valuable tips!</p>
     </main>
 </body>
 </html>
