--- a/services.html
+++ b/services.html
@@ -50,8 +50,8 @@
 
     <main>
         <h1>Our Services</h1>
-        <p>We service NYC and Tristate area. We are trained to meet the unique needs of each client.</p>
-        <p>Contact us today to learn more about how we can ensure your building remains comfortably warm or cool.</p>
+        <p>Proudly serving the New York City and Tri-State area, our team is trained to cater to the unique requirements of each client. From installation to maintenance and emergency repairs, we offer a comprehensive range of services designed to keep your space comfortably warm in the winter and refreshingly cool in the summer.</p>
+        <p>Contact us today to learn more about how we can enhance your indoor climate and elevate your comfort year-round!</p>
     </main>
 
 </body>
