--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 
     <main>
         <h1>About Us</h1>
-        <p>Top cooling hvac is a well-established hvac company with many years of experience in the hvac industry .</p>
-        <p>Established in 2020, we continue to grown and stay ahead of the competition in the heating and cooling industry.</p>
+        <p>Top Cooling HVAC is a reputable HVAC company with years of experience serving our valued clients. Established in 2014, we have continuously evolved and adapted to the changing of the heating and cooling industry and consistently staying ahead of the competition.</p>
+        <p>Our commitment to quality and customer satisfaction drives us to deliver unparalleled HVAC solutions tailored to your specific needs.</p>
     </main>
 
 </body>
