--- a/blog.html
+++ b/blog.html
@@ -50,8 +50,8 @@
 
     <main>
         <h1>Our Blog</h1>
-        <p>Welcome to our blog! Here we will share tips, updates, and industry insights to help you stay informed about HVAC systems.</p>
-        <p>Stay tuned for more posts!</p>
+        <p>Welcome to our Blog! Here, we share valuable tips, insightful updates, and industry news designed to keep you informed about HVAC systems and best practices. Whether you're a homeowner looking for maintenance tips or a business seeking energy-efficient solutions, our blog is your go-to resource.</p>
+        <p>Stay tuned for more posts! We’re excited to share knowledge and help you make the best decisions for your HVAC needs.</p>
     </main>
 
 </body>
