--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             background: linear-gradient(to right, #f8f9fa, #e3e6ea);
             color: #333; 
             margin: 0; 
-            position: relative;
         }
         nav { 
             background-color: #333; 
@@ -26,27 +25,6 @@
         nav a:hover { 
             color: #ffcb05; 
         }
-        .banner {
-            position: relative;
-            text-align: center;
-            color: white;
-        }
-        .banner img {
-            width: 800px; 
-            height: 600px; 
-            display: block; 
-            object-fit: cover; 
-            margin: 0 auto;
-        }
-        .banner-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.5); /* Optional: Adds a dark background */
-            padding: 10px;
-            border-radius: 5px;
-        }
         main { 
             padding: 40px; 
             max-width: 800px; 
@@ -61,12 +39,6 @@
     </style>
 </head>
 <body>
-    <div class="banner">
-        <img src="Screenshot 2025-05-31 215036.png" alt="Banner">
-        <div class="banner-text">
-            <h1>Welcome to Top Cooling HVAC</h1>
-        </div>
-    </div>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -74,7 +46,9 @@
         <a href="contact.html">Contact Us</a>
         <a href="blog.html">Blog</a>
     </nav>
+    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:800px; height:600px; display:block; object-fit:cover; margin: 0 auto;">
     <main>
+        <h1>Welcome to Top Cooling HVAC</h1>
         <p>At Top Cooling HVAC, we are dedicated to ensuring your ultimate comfort with state-of-the-art technology and expert installation services. Our team is committed to excellence and stays up-to-date with the latest innovations in the HVAC industry. Stay tuned for exciting updates and valuable tips!</p>
     </main>
 </body>
