--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Top Cooling HVAC</title>
+    <title>Blog - Top Cooling HVAC</title>
     <style>
-        /* Your existing CSS styles go here */
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+            color: #333; 
+            margin: 0; 
+        }
+        nav { 
+            background-color: #333; 
+            padding: 15px; 
+            text-align: center; 
+        }
+        nav a { 
+            margin: 0 15px; 
+            text-decoration: none; 
+            color: #fff; 
+            font-weight: bold; 
+        }
+        nav a:hover { 
+            color: #ffcb05; 
+        }
+        main { 
+            padding: 40px; 
+            max-width: 800px; 
+            margin: auto; 
+            background: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+        }
+        h1 { 
+            color: #00395d;
+        }
+        h1:hover {
+            color: #ffcb05; /* Changes the color on hover */
+            transition: color 0.3s; /* Smooth transition effect */
+        }
     </style>
 </head>
 <body>
+    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:800px; height:600px; display:block; object-fit:cover; margin: 0 auto;">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -18,10 +53,12 @@
     </nav>
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
+        <p>At Top Cooling HVAC, we are dedicated to ensuring your ultimate comfort with state-of-the-art technology and expert installation services. Our team is committed to excellence and stays up-to-date with the latest innovations in the HVAC industry. Stay tuned for exciting updates and valuable tips!</p>
+
         <button id="infoButton">Learn More About Our Services</button>
         <p id="info" style="display:none;">We offer top-notch installation, maintenance, and repair services for all your HVAC needs!</p>
     </main>
-    
+
     <script>
         document.getElementById("infoButton").onclick = function() {
             var info = document.getElementById("info");
