--- a/about.html
+++ b/about.html
@@ -5,45 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Top Cooling HVAC</title>
     <style>
-      body { 
-          font-family: Arial, sans-serif; 
-          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
-          color: #333; 
-          margin: 0; 
-      }
-      nav { 
-          background-color: #333; 
-          padding: 15px; 
-          text-align: center; 
-      }
-      nav a { 
-          margin: 0 15px; 
-          text-decoration: none; 
-          color: #fff; 
-          font-weight: bold; 
-      }
-      nav a:hover { 
-          color: #ffcb05; 
-      }
-      main { 
-          padding: 40px; 
-          max-width: 800px; 
-          margin: auto; 
-          background: #fff; 
-          border-radius: 8px; 
-          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-      }
-      h1 { 
-          color: #00395d;
-      }
-      img {
-          width: 100%;
-          border-radius: 8px;
-      }
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+            color: #333; 
+            margin: 0; 
+        }
+        nav { 
+            background-color: #333; 
+            padding: 15px; 
+            text-align: center; 
+        }
+        nav a { 
+            margin: 0 15px; 
+            text-decoration: none; 
+            color: #fff; 
+            font-weight: bold; 
+        }
+        nav a:hover { 
+            color: #ffcb05; 
+        }
+        main { 
+            padding: 40px; 
+            max-width: 800px; 
+            margin: auto; 
+            background: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+        }
+        h1 { 
+            color: #00395d;
+        }
+        img {
+            width: 100%;
+            border-radius: 8px;
+        }
+        p {
+            transition: background-color 0.3s; /* Smooth transition */
+        }
+        p:hover {
+            background-color: #e3e6ea; /* Change background on hover */
+        }
     </style>
 </head>
 <body>
-
 
     <nav>
         <a href="index.html">Home</a>
