--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             color: #00395d;
         }
         h1:hover {
-            color: #ffcb05; /* Changes the color on hover */
+            color: red; /* Changes the color to red on hover */
             transition: color 0.3s; /* Smooth transition effect */
         }
     </style>
