--- a/about.html
+++ b/about.html
@@ -5,45 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Top Cooling HVAC</title>
     <style>
-      body { 
-          font-family: Arial, sans-serif; 
-          background: linear-gradient(to right, #f8f9fa, #e3e6ea);
-          color: #333; 
-          margin: 0; 
-      }
-      nav { 
-          background-color: #333; 
-          padding: 15px; 
-          text-align: center; 
-      }
-      nav a { 
-          margin: 0 15px; 
-          text-decoration: none; 
-          color: #fff; 
-          font-weight: bold; 
-      }
-      nav a:hover { 
-          color: #ffcb05; 
-      }
-      main { 
-          padding: 40px; 
-          max-width: 800px; 
-          margin: auto; 
-          background: #fff; 
-          border-radius: 8px; 
-          box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-      }
-      h1 { 
-          color: #00395d;
-      }
-      img {
-          width: 100%;
-          border-radius: 8px;
-      }
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(to right, #f8f9fa, #e3e6ea);
+            color: #333; 
+            margin: 0; 
+        }
+        nav { 
+            background-color: #333; 
+            padding: 15px; 
+            text-align: center; 
+        }
+        nav a { 
+            margin: 0 15px; 
+            text-decoration: none; 
+            color: #fff; 
+            font-weight: bold; 
+        }
+        nav a:hover { 
+            color: #ffcb05; 
+        }
+        main { 
+            padding: 40px; 
+            max-width: 800px; 
+            margin: auto; 
+            background: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+            display: flex; /* Use Flexbox for layout */
+            align-items: center; /* Center vertically */
+        }
+        h1 { 
+            color: #00395d;
+        }
+        img {
+            width: 400px; /* Set a fixed width */
+            height: 300px; /* Set a fixed height */
+            border-radius: 8px;
+            margin-left: 20px; /* Space between text and image */
+        }
+        .text-container {
+            flex: 1; /* Allow the text container to take remaining space */
+        }
     </style>
 </head>
 <body>
-
 
     <nav>
         <a href="index.html">Home</a>
@@ -54,11 +60,13 @@
     </nav>
 
     <main>
-        <h1>About Us</h1>
-    <img src="Screenshot 2025-06-06 173649.png" alt="Banner" style="width:400px; height:300px; display:block; object-fit:cover; margin: 0 auto;">
-
-        <p>Top Cooling HVAC is a reputable HVAC company with years of experience serving our valued clients. Established in 2014, we have continuously evolved and adapted to the changing of the heating and cooling industry and consistently staying ahead of the competition.</p>
-        <p>Our commitment to quality and customer satisfaction drives us to deliver unparalleled HVAC solutions tailored to your specific needs.</p>
+        <div class="text-container">
+            <h1>About Us</h1>
+            <p>We strive to exceed your expectations.</p>
+            <p>Top Cooling HVAC is a reputable HVAC company with years of experience serving our valued clients. Established in 2014, we have continuously evolved and adapted to the changing heating and cooling industry while consistently staying ahead of the competition.</p>
+            <p>Our commitment to quality and customer satisfaction drives us to deliver unparalleled HVAC solutions tailored to your specific needs.</p>
+        </div>
+        <img src="Screenshot 2025-06-06 173649.png" alt="Banner">
     </main>
 
 </body>
