--- a/about.html
+++ b/about.html
@@ -48,11 +48,13 @@
         }
         .banner {
             position: absolute; /* Position the text absolutely within the container */
-            bottom: 10px; /* Position it near the bottom of the image */
-            left: 10px; /* Position it from the left */
+            top: 10px; /* Position it near the top of the image */
+            left: 0; /* Align it to the left */
+            right: 0; /* Fill it out to the right edge */
             background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
             color: #fff; /* White text color */
             padding: 10px; /* Add some padding */
+            text-align: center; /* Center the text */
             border-radius: 5px; /* Slightly rounded corners */
             font-weight: bold; /* Bold text */
         }
