--- a/services.html
+++ b/services.html
@@ -52,7 +52,19 @@
         <h1>Our Services</h1>
         <p>Proudly serving the New York City and Tri-State area, our team is trained to cater to the unique requirements of each client. From installation to maintenance and emergency repairs, we offer a comprehensive range of services designed to keep your space comfortably warm in the winter and refreshingly cool in the summer.</p>
         <p>Contact us today to learn more about how we can enhance your indoor climate and elevate your comfort year-round!</p>
+  <button id="infoButton">Learn More About Our Services</button>
+        <p id="info" style="display:none;">We offer top-notch installation and repair services for all your HVAC needs!</p>
     </main>
 
+    <script>
+        document.getElementById("infoButton").onclick = function() {
+            var info = document.getElementById("info");
+            if (info.style.display === "none") {
+                info.style.display = "block";
+            } else {
+                info.style.display = "none";
+            }
+        };
+    </script>
 </body>
 </html>
