--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,36 @@
         h1 { 
             color: #00395d;
         }
+        form {
+            display: flex;
+            flex-direction: column; /* Stack the input fields vertically */
+        }
+        label {
+            margin-top: 10px; /* Add some space above each label */
+        }
+        input, textarea {
+            margin-top: 5px; /* Space between label and input/textarea */
+            padding: 10px; /* Add some padding inside inputs */
+            border: 1px solid #ccc; /* Add border to inputs */
+            border-radius: 4px; /* Rounded corners for inputs */
+        }
+        button {
+            margin-top: 10px; /* Space above the button */
+            padding: 10px; /* Add some padding for the button */
+            background-color: #00395d; /* Button color */
+            color: #fff; /* Button text color */
+            border: none; /* Remove default border */
+            border-radius: 4px; /* Rounded corners for button */
+            cursor: pointer; /* Change cursor when hovering */
+        }
+        button:hover {
+            background-color: #005080; /* Darker shade on hover */
+        }
+        .thank-you {
+            margin-top: 20px; /* Space above thank you message */
+            color: green; /* Color for the thank you message */
+            display: none; /* Initially hidden */
+        }
     </style>
 </head>
 <body>
@@ -50,8 +80,8 @@
 
     <main>
         <h1>Contact Us</h1>
-        <p>We would love to hear from you, Please fill out the form to get in touch with us.</p>
-        <form action="#" method="post">
+        <p>We would love to hear from you! Please fill out the form to get in touch with us.</p>
+        <form action="#" method="post" onsubmit="return showThankYouMessage();">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -63,7 +93,20 @@
 
             <button type="submit">Send Message</button>
         </form>
+        <p class="thank-you" id="thank-you-message">Thank you for your message!</p>
     </main>
+
+    <script>
+        function showThankYouMessage() {
+            // Prevent the default form submission.
+            event.preventDefault();
+            // Show the thank you message.
+            document.getElementById('thank-you-message').style.display = 'block';
+            // Optionally, reset the form.
+            document.querySelector('form').reset();
+            return false; // Prevent form submission.
+        }
+    </script>
 
 </body>
 </html>
